--- a/styles/CSS/style.css
+++ b/styles/CSS/style.css
@@ -6,7 +6,7 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
   background-color: #d5f0cd;
   text-align: center;
   color: #222f78;
@@ -168,7 +168,7 @@ button {
   border-style: none;
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
-  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
   letter-spacing: .05em;
   font-size: 1.5em;
   -webkit-transition: -webkit-transform 0.25s;
@@ -194,4 +194,25 @@ button:hover {
 
 .footer a {
   color: #222f78;
+}
+
+@media screen and (max-width: 700px) {
+  button {
+    width: 7em;
+    height: 2em;
+    font-size: 1em;
+  }
+  .gameboard {
+    width: 85%;
+    padding-bottom: 72%;
+  }
+  .modal {
+    font-size: 1em;
+  }
+  .tooltip .tooltip-text {
+    width: 250%;
+    bottom: -100%;
+    left: -100%;
+    color: red;
+  }
 }
