--- a/styles/SCSS/style.scss
+++ b/styles/SCSS/style.scss
@@ -7,7 +7,7 @@ html {
 
 body {
 	font-family: 'Roboto', sans-serif;
-	font-family: 'ZCOOL QingKe HuangYou', cursive;
+	font-family: 'ZCOOL QingKe HuangYou', sans-serif;
 	// background-color: rgba(255, 242, 158, 1);// alternate background color
 	background-color: rgba(213, 240, 205, 1);
 	text-align: center;
@@ -28,6 +28,8 @@ h3 {
 
 .gameboard {
 	width: 40%;
+	// min-width: 500px;
+	// min-height: 40px;
 	background-color: $navy;
 	display: flex;
 	flex-wrap: wrap;
@@ -43,6 +45,7 @@ h3 {
 
 .game-section {
 	flex: 50%;
+	// min-width: 250px;
 	padding-bottom: 42.5%;
 	border-top-left-radius: 100%;
 	box-shadow: inset .1em .1em 1em .25em $shadow;
@@ -147,7 +150,7 @@ button {
 	border-style: none;
 	text-transform: uppercase;	
 	font-family: 'Roboto', sans-serif;
-	font-family: 'ZCOOL QingKe HuangYou', cursive;
+	font-family: 'ZCOOL QingKe HuangYou', sans-serif;
 	letter-spacing: .05em;
 	font-size: 1.5em;
 	transition: transform 0.25s;
@@ -167,4 +170,30 @@ button {
 	a {
 		color: $navy;
 	}
+}
+
+@media screen and  (max-width: 700px){
+   
+	button {
+      width: 7em;
+		height: 2em;
+      font-size: 1em;
+   }
+
+	.gameboard {
+		width: 85%;
+		padding-bottom: 72%;
+	}
+
+	.modal {
+		font-size: 1em;
+	}
+
+	.tooltip .tooltip-text {
+		width: 250%;
+		bottom: -100%;
+		left:-100%;
+		color: red;
+	}
+
 }
